# dlip-pytorch-DL-good-practises

./: .gitignore  LICENSE  README.md  checkpoint.pt  pyproject.toml  requirements.txt
notebooks/: TP1_Pb1_Multiclass.ipynb  TP1_Pb2_Regression.ipynb  test_trainer.ipynb  trained_model_analysis.ipynb
notebooks/mlflow_introduction/: mlflow_introduction.ipynb
src/data/: mnist.py
src/dlip/conf/: train_model.yaml
src/dlip/data/: data.py  usps.py
src/dlip/data/conf/: train_model.yaml
src/dlip/models/: evaluation.py  models.py  test_model.py  train_model.py
src/dlip/utils/: load_data.py  mlflow.py
src/models/: train_model.py
